--- a/.config/qutebrowser/keys.conf
+++ b/.config/qutebrowser/keys.conf
@@ -37,152 +37,137 @@
 #   keychain
 #   keychain2
 #   ...
+#
+
+# Keybindings for all but normal mode {{{
 
 [!normal]
 
 clear-keychain ;; leave-mode
-    <Escape>
-    <Ctrl-[>
+    <escape>
+    <ctrl-[>
+
+# }}}
+# Keybindings for normal mode {{{
 
 [normal]
-# Keybindings for normal mode.
+
+<unbound>
+    ;r
+    ;y
+    ;i
+    ;o
+    ;d
+    ;f
+    ;h
+    ;b
+    ;R
+    ;Y
+    ;I
+    ;O
+    ;t
+
+set-cmd-text :
+    ;
+
+clear-keychain ;; hint
+    :
 
 clear-keychain ;; search
-    <Escape>
+    <escape>
 
-set-cmd-text -s :open
-    o
+# set-cmd-text -s :open
+#     o
 
-set-cmd-text :open {url}
-    go
+# set-cmd-text :open {url}
+#     go
 
-set-cmd-text -s :open -t
-    O
+# set-cmd-text -s :open -t
+#     O
+#     t
 
-set-cmd-text :open -t {url}
-    gO
+# set-cmd-text :open -t {url}
+#     gO
 
-set-cmd-text -s :open -b
-    xo
+# set-cmd-text -s :open -b
+#     xo
 
-set-cmd-text :open -b {url}
-    xO
+# set-cmd-text :open -b {url}
+#     xO
 
-set-cmd-text -s :open -w
-    wo
+# set-cmd-text -s :open -w
+#     wo
 
-set-cmd-text :open -w {url}
-    wO
+# set-cmd-text :open -w {url}
+#     wO
 
 open -t
-    ga
-    <Ctrl-T>
+    t
+    <ctrl-t>
 
 tab-close
-    d
-    <Ctrl-W>
+    x
+    <ctrl-w>
 
-tab-close -o
-    D
+# tab-only
+#     co
 
-tab-only
-    co
+# tab-focus
+#     J
 
-tab-focus
-    J
+# tab-move
+#     gm
 
-tab-move
-    gm
+# tab-move -
+#     gl
 
-tab-move -
-    gl
+# tab-move +
+#     gr
 
-tab-move +
-    gr
+# tab-prev
+#     K
 
-tab-prev
-    K
+# tab-clone
+#     gC
 
-tab-clone
-    gC
+# reload
+#     r
 
-reload
-    r
+# reload -f
+#     R
 
-reload -f
-    R
+# back
+#     H
 
-back
-    H
+# back -t
+#     th
 
-back -t
-    th
+# back -w
+#     wh
 
-back -w
-    wh
+# forward
+#     L
 
-forward
-    L
+# forward -t
+#     tl
 
-forward -t
-    tl
+# forward -w
+#     wl
 
-forward -w
-    wl
+# fullscreen
+#     <f11>
 
-fullscreen
-    <F11>
+# hint
+#     f
 
-hint
-    f
+# hint all tab
+#     F
 
-hint all tab
-    F
+# hint all window
+#     wf
 
-hint all window
-    wf
-
-hint all tab-bg
-    ;b
-
-hint all tab-fg
-    ;f
-
-hint all hover
-    ;h
-
-hint images
-    ;i
-
-hint images tab
-    ;I
-
-hint images tab-bg
-    .i
-
-hint links fill ":open {hint-url}"
-    ;o
-
-hint links fill ":open -t {hint-url}"
-    ;O
-
-hint links fill ":open -b {hint-url}"
-    .o
-
-hint links yank
-    ;y
-
-hint links yank-primary
-    ;Y
-
-hint --rapid links tab-bg
-    ;r
-
-hint --rapid links window
-    ;R
-
-hint links download
-    ;d
+# hint images tab-bg
+#     .i
 
 scroll left
     h
@@ -197,8 +182,7 @@ scroll right
     l
 
 undo
-    u
-    <Ctrl-Shift-T>
+    <ctrl-shift-t>
 
 scroll-perc 0
     gg
@@ -218,246 +202,276 @@ enter-mode insert
 enter-mode caret
     v
 
-yank
-    yy
+# yank
+#     yy
 
-yank -s
-    yY
+# yank -s
+#     yY
 
-yank -t
-    yt
+# yank -t
+#     yt
 
-yank -ts
-    yT
+# yank -ts
+#     yT
 
-yank -d
-    yd
+# yank -d
+#     yd
 
-yank -ds
-    yD
+# yank -ds
+#     yD
 
-paste
-    pp
+# paste
+#     pp
 
-paste -s
-    pP
+# paste -s
+#     pP
 
-paste -t
-    Pp
+# paste -t
+#     Pp
 
-paste -ts
-    PP
+# paste -ts
+#     PP
 
-paste -w
-    wp
+# paste -w
+#     wp
 
-paste -ws
-    wP
+# paste -ws
+#     wP
 
-quickmark-save
-    m
+# quickmark-save
+#     m
 
-set-cmd-text -s :quickmark-load
-    b
+# set-cmd-text -s :quickmark-load
+#     b
 
-set-cmd-text -s :quickmark-load -t
-    B
+# set-cmd-text -s :quickmark-load -t
+#     B
 
-set-cmd-text -s :quickmark-load -w
-    wb
+# set-cmd-text -s :quickmark-load -w
+#     wb
 
-bookmark-add
-    M
+# bookmark-add
+#     M
 
-set-cmd-text -s :bookmark-load
-    gb
+# set-cmd-text -s :bookmark-load
+#     gb
 
-set-cmd-text -s :bookmark-load -t
-    gB
+# set-cmd-text -s :bookmark-load -t
+#     gB
 
-set-cmd-text -s :bookmark-load -w
-    wB
+# set-cmd-text -s :bookmark-load -w
+#     wB
 
-save
-    sf
+# save
+#     sf
 
-set-cmd-text -s :set
-    ss
+# set-cmd-text -s :set
+#     ss
 
-set-cmd-text -s :set -t
-    sl
+# set-cmd-text -s :set -t
+#     sl
 
-set-cmd-text -s :set keybind
-    sk
+# set-cmd-text -s :set keybind
+#     sk
 
-zoom-out
-    -
+# zoom-out
+#     -
 
-zoom-in
-    +
+# zoom-in
+#     +
 
-zoom
-    =
+# zoom
+#     =
 
-navigate prev
-    [[
+# navigate prev
+#     [[
 
-navigate next
-    ]]
+# navigate next
+#     ]]
 
-navigate prev -t
-    {{
+# navigate prev -t
+#     {{
 
-navigate next -t
-    }}
+# navigate next -t
+#     }}
 
-navigate up
-    gu
+# navigate up
+#     gu
 
-navigate up -t
-    gU
+# navigate up -t
+#     gU
 
-navigate increment
-    <Ctrl-A>
+# navigate increment
+#     <ctrl-a>
 
-navigate decrement
-    <Ctrl-X>
+# navigate decrement
+#     <ctrl-x>
 
-inspector
-    wi
+# inspector
+#     wi
 
-download
-    gd
+# download
+#     gd
 
-download-cancel
-    ad
+# download-cancel
+#     ad
 
-download-clear
-    cd
+# download-clear
+#     cd
 
-view-source
-    gf
+# view-source
+#     gf
 
-set-cmd-text -s :buffer
-    gt
+# set-cmd-text -s :buffer
+#     gt
 
-tab-focus last
-    <Ctrl-Tab>
+# tab-focus last
+#     <ctrl-tab>
 
-enter-mode passthrough
-    <Ctrl-V>
+# enter-mode passthrough
+#     <ctrl-v>
 
-quit
-    <Ctrl-Q>
+# quit
+#     <ctrl-q>
 
-scroll-page 0 1
-    <Ctrl-F>
+# scroll-page 0 1
+#     <ctrl-f>
 
-scroll-page 0 -1
-    <Ctrl-B>
+# scroll-page 0 -1
+#     <ctrl-b>
 
-scroll-page 0 0.5
-    <Ctrl-D>
+# scroll-page 0 0.5
+#     d
+#     <ctrl-d>
 
-scroll-page 0 -0.5
-    <Ctrl-U>
+# scroll-page 0 -0.5
+#     u
+#     <ctrl-u>
 
-tab-focus 1
-    <Alt-1>
+# tab-focus 1
+#     <alt-1>
 
-tab-focus 2
-    <Alt-2>
+# tab-focus 2
+#     <alt-2>
 
-tab-focus 3
-    <Alt-3>
+# tab-focus 3
+#     <alt-3>
 
-tab-focus 4
-    <Alt-4>
+# tab-focus 4
+#     <alt-4>
 
-tab-focus 5
-    <Alt-5>
+# tab-focus 5
+#     <alt-5>
 
-tab-focus 6
-    <Alt-6>
+# tab-focus 6
+#     <alt-6>
 
-tab-focus 7
-    <Alt-7>
+# tab-focus 7
+#     <alt-7>
 
-tab-focus 8
-    <Alt-8>
+# tab-focus 8
+#     <alt-8>
 
-tab-focus 9
-    <Alt-9>
+# tab-focus 9
+#     <alt-9>
 
-home
-    <Ctrl-h>
+# home
+#     <ctrl-h>
 
-stop
-    <Ctrl-s>
+# stop
+#     <ctrl-s>
 
-print
-    <Ctrl-Alt-p>
+# print
+#     <ctrl-alt-p>
 
-open qute:settings
-    Ss
+# open qute:settings
+#     Ss
 
-follow-selected
-    <Return>
-    <Ctrl-M>
-    <Ctrl-J>
-    <Shift-Return>
-    <Enter>
-    <Shift-Enter>
+# follow-selected
+#     <return>
+#     <ctrl-m>
+#     <ctrl-j>
+#     <shift-return>
+#     <enter>
+#     <shift-enter>
 
-follow-selected -t
-    <Ctrl-Return>
-    <Ctrl-Enter>
+# follow-selected -t
+#     <ctrl-return>
+#     <ctrl-enter>
 
-[insert]
-# Keybindings for insert mode.
+# open -w
+#     <ctrl-n>
+
+# enter-mode set_mark
+#     `
+
+# enter-mode jump_mark
+#     '
+
+# yank -p
+#     yp
+
+# yank -ps
+#     yP
+
+# repeat-command
+#     .
+
+# tab-close -o
+#     D
+
+hint inputs
+    ,t
+
+# }}}
+# Keybindings for insert mode {{{
+
 # Since normal keypresses are passed through, only special keys are
 # supported in this mode.
 # Useful hidden commands to map in this section:
 #  * `open-editor`: Open a texteditor with the focused field.
 #  * `paste-primary`: Paste primary selection at cursor position.
 
-open-editor
-    <Ctrl-E>
+[insert]
 
-paste-primary
-    <Shift-Ins>
+# open-editor
+#     <ctrl-e>
+
+# paste-primary
+#     <shift-ins>
+
+# }}}
+# Keybindings for hint mode {{{
 
 [hint]
-# Keybindings for hint mode.
+
 # Since normal keypresses are passed through, only special keys are
 # supported in this mode.
 # Useful hidden commands to map in this section:
 #  * `follow-hint`: Follow the currently selected hint.
 
-follow-hint
-    <Return>
-    <Ctrl-M>
-    <Ctrl-J>
-    <Shift-Return>
-    <Enter>
-    <Shift-Enter>
+# follow-hint
+#     <return>
+#     <ctrl-m>
+#     <ctrl-j>
+#     <shift-return>
+#     <enter>
+#     <shift-enter>
 
-hint --rapid links tab-bg
-    <Ctrl-R>
+# hint --rapid links tab-bg
+#     <ctrl-r>
 
-hint links
-    <Ctrl-F>
+# hint links
+#     <ctrl-f>
 
-hint all tab-bg
-    <Ctrl-B>
+# hint all tab-bg
+#     <ctrl-b>
 
-[passthrough]
-# Keybindings for passthrough mode.
-# Since normal keypresses are passed through, only special keys are
-# supported in this mode.
+# }}}
+# Keybindings for command mode {{{
 
 [command]
-# Keybindings for command mode.
+
 # Since normal keypresses are passed through, only special keys are
 # supported in this mode.
 # Useful hidden commands to map in this section:
@@ -467,33 +481,35 @@ hint all tab-bg
 #  * `completion-item-next`: Select next item in completion.
 #  * `command-accept`: Execute the command currently in the commandline.
 
-command-history-prev
-    <Ctrl-P>
+# command-history-prev
+#     <ctrl-p>
 
-command-history-next
-    <Ctrl-N>
+# command-history-next
+#     <ctrl-n>
 
-completion-item-prev
-    <Shift-Tab>
-    <Up>
+# completion-item-prev
+#     <shift-tab>
+#     <up>
 
-completion-item-next
-    <Tab>
-    <Down>
+# completion-item-next
+#     <tab>
+#     <down>
 
-completion-item-del
-    <Ctrl-D>
+# completion-item-del
+#     <ctrl-d>
 
-command-accept
-    <Return>
-    <Ctrl-M>
-    <Ctrl-J>
-    <Shift-Return>
-    <Enter>
-    <Shift-Enter>
+# command-accept
+#     <return>
+#     <ctrl-m>
+#     <ctrl-j>
+#     <shift-return>
+#     <enter>
+#     <shift-enter>
+
+# }}}
+# Keybindings for prompts in the status line {{{
 
 [prompt]
-# Keybindings for prompts in the status line.
 # You can bind normal keys in this mode, but they will be only active
 # when a yes/no-prompt is asked. For other prompt modes, you can only
 # bind special keys.
@@ -502,140 +518,142 @@ command-accept
 #  * `prompt-yes`: Answer yes to a yes/no question.
 #  * `prompt-no`: Answer no to a yes/no question.
 
-prompt-accept
-    <Return>
-    <Ctrl-M>
-    <Ctrl-J>
-    <Shift-Return>
-    <Enter>
-    <Shift-Enter>
+# prompt-accept
+#     <return>
+#     <ctrl-m>
+#     <ctrl-j>
+#     <shift-return>
+#     <enter>
+#     <shift-enter>
 
-prompt-yes
-    y
+# prompt-yes
+#     y
 
-prompt-no
-    n
+# prompt-no
+#     n
 
-[command,prompt]
+# prompt-open-download
+#     <ctrl-x>
 
-rl-backward-char
-    <Ctrl-B>
+# [command,prompt]
 
-rl-forward-char
-    <Ctrl-F>
+# rl-backward-char
+#     <ctrl-b>
 
-rl-backward-word
-    <Alt-B>
+# rl-forward-char
+#     <ctrl-f>
 
-rl-forward-word
-    <Alt-F>
+# rl-backward-word
+#     <alt-b>
 
-rl-beginning-of-line
-    <Ctrl-A>
+# rl-forward-word
+#     <alt-f>
 
-rl-end-of-line
-    <Ctrl-E>
+# rl-beginning-of-line
+#     <ctrl-a>
 
-rl-unix-line-discard
-    <Ctrl-U>
+# rl-end-of-line
+#     <ctrl-e>
 
-rl-kill-line
-    <Ctrl-K>
+# rl-unix-line-discard
+#     <ctrl-u>
 
-rl-kill-word
-    <Alt-D>
+# rl-kill-line
+#     <ctrl-k>
 
-rl-unix-word-rubout
-    <Ctrl-W>
-    <Alt-Backspace>
+# rl-kill-word
+#     <alt-d>
 
-rl-yank
-    <Ctrl-Y>
+# rl-unix-word-rubout
+#     <ctrl-w>
+#     <alt-backspace>
 
-rl-delete-char
-    <Ctrl-?>
+# rl-yank
+#     <ctrl-y>
 
-rl-backward-delete-char
-    <Ctrl-H>
+# rl-delete-char
+#     <ctrl-?>
 
-[caret]
+# rl-backward-delete-char
+#     <ctrl-h>
 
-toggle-selection
-    v
-    <Space>
+# [caret]
 
-drop-selection
-    <Ctrl-Space>
+# toggle-selection
+#     v
+#     <space>
 
-enter-mode normal
-    c
+# drop-selection
+#     <ctrl-space>
 
-move-to-next-line
-    j
+# enter-mode normal
+#     c
 
-move-to-prev-line
-    k
+# move-to-next-line
+#     j
 
-move-to-next-char
-    l
+# move-to-prev-line
+#     k
 
-move-to-prev-char
-    h
+# move-to-next-char
+#     l
 
-move-to-end-of-word
-    e
+# move-to-prev-char
+#     h
 
-move-to-next-word
-    w
+# move-to-end-of-word
+#     e
 
-move-to-prev-word
-    b
+# move-to-next-word
+#     w
 
-move-to-start-of-next-block
-    ]
+# move-to-prev-word
+#     b
 
-move-to-start-of-prev-block
-    [
+# move-to-start-of-next-block
+#     ]
 
-move-to-end-of-next-block
-    }
+# move-to-start-of-prev-block
+#     [
 
-move-to-end-of-prev-block
-    {
+# move-to-end-of-next-block
+#     }
 
-move-to-start-of-line
-    0
+# move-to-end-of-prev-block
+#     {
 
-move-to-end-of-line
-    $
+# move-to-start-of-line
+#     0
 
-move-to-start-of-document
-    gg
+# move-to-end-of-line
+#     $
 
-move-to-end-of-document
-    G
+# move-to-start-of-document
+#     gg
 
-yank-selected -p
-    Y
+# move-to-end-of-document
+#     G
 
-yank-selected
-    y
-    <Return>
-    <Ctrl-M>
-    <Ctrl-J>
-    <Shift-Return>
-    <Enter>
-    <Shift-Enter>
+# yank-selected -p
+#     Y
 
-scroll left
-    H
+# yank-selected
+#     y
+#     <return>
+#     <ctrl-m>
+#     <ctrl-j>
+#     <shift-return>
+#     <enter>
+#     <shift-enter>
 
-scroll down
-    J
+# scroll left
+#     H
 
-scroll up
-    K
+# scroll down
+#     J
 
-scroll right
-    L
+# scroll up
+#     K
 
+# scroll right
+#     L
