--- a/.config/qutebrowser/qutebrowser.conf
+++ b/.config/qutebrowser/qutebrowser.conf
@@ -34,11 +34,6 @@
 #         smart: Search case-sensitively if there are capital chars
 #     Default: smart
 #
-# wrap-search (Bool):
-#     Whether to wrap finding text to the top when arriving at the end.
-#     Valid values: true, false
-#     Default: true
-#
 # startpage (List):
 #     The default page(s) to open at the start, separated by commas.
 #     Default: https://duckduckgo.com
@@ -153,24 +148,23 @@
 #     Valid values: host, path, query, anchor
 #     Default: path,query
 ignore-case = smart
-wrap-search = true
-startpage = https://duckduckgo.com
+startpage = https://github.com/jaagr
 default-page = ${startpage}
 auto-search = naive
-auto-save-config = true
-auto-save-interval = 15000
-editor = gvim -f "{}"
+auto-save-config = false
+auto-save-interval = 60000
+editor = termite -t floatme -e "nvim -f {}"
 editor-encoding = utf-8
 private-browsing = false
-developer-extras = false
+developer-extras = true
 print-element-backgrounds = true
 xss-auditing = false
 site-specific-quirks = true
-default-encoding = 
+default-encoding =
 new-instance-open-target = tab
 log-javascript-console = debug
 save-session = false
-session-default-name = 
+session-default-name =
 url-incdec-segments = path,query
 
 [ui]
@@ -190,6 +184,11 @@ url-incdec-segments = path,query
 #     Valid values: top, bottom
 #     Default: top
 #
+# status-position (VerticalPosition):
+#     The position of the status bar.
+#     Valid values: top, bottom
+#     Default: bottom
+#
 # message-timeout (Int):
 #     Time (in ms) to show messages in the statusbar for.
 #     Default: 2000
@@ -207,11 +206,6 @@ url-incdec-segments = path,query
 #         downloads: Show a confirmation if downloads are running
 #         never: Never show a confirmation.
 #     Default: never
-#
-# display-statusbar-messages (Bool):
-#     Whether to display javascript statusbar messages.
-#     Valid values: true, false
-#     Default: false
 #
 # zoom-text-only (Bool):
 #     Whether the zoom factor on a frame applies only to the text or to
@@ -264,6 +258,7 @@ url-incdec-segments = path,query
 #     otherwise.
 #     * `{id}`: The internal window ID of this window.
 #     * `{scroll_pos}`: The page scroll position.
+#     * `{host}`: The host of the current web page.
 #     Default: {perc}{title}{title_sep}qutebrowser
 #
 # hide-mouse-cursor (Bool):
@@ -280,25 +275,32 @@ url-incdec-segments = path,query
 #     Hide the window decoration when using wayland (requires restart)
 #     Valid values: true, false
 #     Default: false
+#
+# keyhint-blacklist (List):
+#     Keychains that shouldn't be shown in the keyhint dialog
+#     Globs are supported, so ';*' will blacklist all keychainsstarting
+#     with ';'. Use '*' to disable keyhints
+#     Default:
 zoom-levels = 25%,33%,50%,67%,75%,90%,100%,110%,125%,150%,175%,200%,250%,300%,400%,500%
-default-zoom = 100%
+default-zoom = 75%
 downloads-position = top
+status-position = bottom
 message-timeout = 2000
 message-unfocused = false
 confirm-quit = never
-display-statusbar-messages = false
 zoom-text-only = false
 frame-flattening = false
-user-stylesheet = ::-webkit-scrollbar { width: 0px; height: 0px; }
-css-media-type = 
+user-stylesheet = ui.css
+css-media-type =
 smooth-scrolling = false
 remove-finished-downloads = -1
-hide-statusbar = false
-statusbar-padding = 1,1,0,0
+hide-statusbar = true
+statusbar-padding = 8,8,4,4
 window-title-format = {perc}{title}{title_sep}qutebrowser
 hide-mouse-cursor = false
 modal-js-dialog = false
 hide-wayland-decoration = false
+keyhint-blacklist =
 
 [network]
 # Settings related to the network.
@@ -347,14 +349,19 @@ hide-wayland-decoration = false
 #     Whether to try to pre-fetch DNS entries to speed up browsing.
 #     Valid values: true, false
 #     Default: true
+#
+# custom-headers (HeaderDict):
+#     Set custom headers for qutebrowser HTTP requests.
+#     Default:
 do-not-track = true
 accept-language = en-US,en
 referer-header = same-domain
-user-agent = 
+user-agent =
 proxy = system
 proxy-dns-requests = true
 ssl-strict = ask
 dns-prefetch = true
+custom-headers =
 
 [completion]
 # Options related to completion and command history.
@@ -422,20 +429,24 @@ height = 50%
 cmd-history-max-items = 100
 web-history-max-items = 1000
 quick-complete = true
-shrink = false
-scrollbar-width = 12
-scrollbar-padding = 2
+shrink = true
+scrollbar-width = 4
+scrollbar-padding = 4
 
 [input]
 # Options related to input modes.
 #
 # timeout (Int):
 #     Timeout for ambiguous key bindings.
+#     If the current input forms both a complete match and a partial
+#     match, the complete match will be executed after this time.
 #     Default: 500
 #
 # partial-timeout (Int):
 #     Timeout for partially typed key bindings.
-#     Default: 1000
+#     If the current input forms only partial matches, the keystring
+#     will be cleared after this time.
+#     Default: 5000
 #
 # insert-mode-on-plugins (Bool):
 #     Whether to switch to insert mode when clicking flash and other
@@ -487,11 +498,11 @@ scrollbar-padding = 2
 #     How much to divide the mouse wheel movements to translate them
 #     into zoom increments.
 #     Default: 512
-timeout = 500
+timeout = 5000
 partial-timeout = 1000
 insert-mode-on-plugins = false
 auto-leave-insert-mode = true
-auto-insert-mode = false
+auto-insert-mode = true
 forward-unbound-keys = auto
 spatial-navigation = false
 links-included-in-focus-chain = true
@@ -603,6 +614,7 @@ mouse-zoom-divider = 512
 #     * `{index}`: The index of this tab.
 #     * `{id}`: The internal tab ID of this tab.
 #     * `{scroll_pos}`: The page scroll position.
+#     * `{host}`: The host of the current web page.
 #     Default: {index}: {title}
 #
 # title-alignment (TextAlignment):
@@ -626,21 +638,21 @@ background-tabs = false
 select-on-remove = right
 new-tab-position = right
 new-tab-position-explicit = last
-last-close = ignore
+last-close = close
 show = always
 show-switching-delay = 800
 wrap = true
 movable = true
 close-mouse-button = middle
-position = top
-show-favicons = true
+position = bottom
+show-favicons = false
 width = 20%
 indicator-width = 3
 tabs-are-windows = false
 title-format = {index}: {title}
 title-alignment = left
 mousewheel-tab-switching = true
-padding = 0,0,5,5
+padding = 5,5,4,4
 indicator-padding = 2,2,0,4
 
 [storage]
@@ -717,13 +729,13 @@ indicator-padding = 2,2,0,4
 # cache-size (Int):
 #     Size of the HTTP network cache.
 #     Default: 52428800
-download-directory = 
+download-directory =
 prompt-download-directory = true
 remember-download-directory = true
-maximum-pages-in-cache = 
-object-cache-capacities = 
-offline-storage-default-quota = 
-offline-web-application-cache-quota = 
+maximum-pages-in-cache =
+object-cache-capacities =
+offline-storage-default-quota =
+offline-web-application-cache-quota =
 offline-storage-database = true
 offline-web-application-storage = true
 local-storage = true
@@ -752,7 +764,7 @@ cache-size = 52428800
 # webgl (Bool):
 #     Enables or disables WebGL.
 #     Valid values: true, false
-#     Default: true
+#     Default: false
 #
 # css-regions (Bool):
 #     Enable or disable support for CSS regions.
@@ -905,7 +917,7 @@ enable-pdfjs = false
 #
 # scatter (Bool):
 #     Whether to scatter hint key chains (like Vimium) or not (like
-#     dwb).
+#     dwb). Ignored for number hints.
 #     Valid values: true, false
 #     Default: true
 #
@@ -924,6 +936,11 @@ enable-pdfjs = false
 #     Valid values: true, false
 #     Default: true
 #
+# auto-follow-timeout (Int):
+#     A timeout to inhibit normal-mode key bindings after a
+#     successfulauto-follow.
+#     Default: 0
+#
 # next-regexes (RegexList):
 #     A comma-separated list of regexes to use for 'next' links.
 #     Default:
@@ -932,8 +949,14 @@ enable-pdfjs = false
 # prev-regexes (RegexList):
 #     A comma-separated list of regexes to use for 'prev' links.
 #     Default: \bprev(ious)?\b,\bback\b,\bolder\b,\b[<←≪]\b,\b(<<|«)\b
-border = 1px solid #E3BE23
-opacity = 0.7
+#
+# find-implementation (String):
+#     Which implementation to use to find elements to hint.
+#         javascript: Better but slower
+#         python: Slightly worse but faster
+#     Default: javascript
+border = none
+opacity = 0
 mode = letter
 chars = asdfghjkl
 min-chars = 1
@@ -941,8 +964,10 @@ scatter = true
 uppercase = false
 dictionary = /usr/share/dict/words
 auto-follow = true
+auto-follow-timeout = 0
 next-regexes = \bnext\b,\bmore\b,\bnewer\b,\b[>→≫]\b,\b(>>|»)\b,\bcontinue\b
 prev-regexes = \bprev(ious)?\b,\bback\b,\bolder\b,\b[<←≪]\b,\b(<<|«)\b
+find-implementation = javascript
 
 [searchengines]
 # Definitions of search engines which can be used via the address bar.
@@ -964,7 +989,7 @@ DEFAULT = https://duckduckgo.com/?q={}
 # Colors used in the UI.
 # A value can be in one of the following format:
 #  * `#RGB`/`#RRGGBB`/`#RRRGGGBBB`/`#RRRRGGGGBBBB`
-#  * A SVG color name as specified in http://www.w3.org/TR/SVG/types.html#ColorKeywords[the W3C specification].
+#  * An SVG color name as specified in http://www.w3.org/TR/SVG/types.html#ColorKeywords[the W3C specification].
 #  * transparent (no color)
 #  * `rgb(r, g, b)` / `rgba(r, g, b, a)` (values 0-255 or percentages)
 #  * `hsv(h, s, v)` / `hsva(h, s, v, a)` (values 0-255, hue 0-359)
@@ -1244,22 +1269,34 @@ DEFAULT = https://duckduckgo.com/?q={}
 #     Background color for webpages if unset (or empty to use the
 #     theme's color)
 #     Default: white
-completion.fg = white
-completion.bg = #333333
-completion.alternate-bg = #444444
+#
+# keyhint.fg (QssColor):
+#     Text color for the keyhint widget.
+#     Default: #FFFFFF
+#
+# keyhint.fg.suffix (CssColor):
+#     Highlight color for keys to complete the current keychain
+#     Default: #FFFF00
+#
+# keyhint.bg (QssColor):
+#     Background color of the keyhint widget.
+#     Default: rgba(0, 0, 0, 80%)
+completion.fg = #2c2c2c
+completion.bg = #c3c3c3
+completion.alternate-bg = #d6d6d6
 completion.category.fg = white
-completion.category.bg = qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 #888888, stop:1 #505050)
-completion.category.border.top = black
-completion.category.border.bottom = ${completion.category.border.top}
-completion.item.selected.fg = black
+completion.category.bg = #FF585A
+completion.category.border.top = #FF585A
+completion.category.border.bottom = #F14C64
+completion.item.selected.fg = #4d4d4d
 completion.item.selected.bg = #e8c000
-completion.item.selected.border.top = #bbbb00
-completion.item.selected.border.bottom = ${completion.item.selected.border.top}
-completion.match.fg = #ff4444
-completion.scrollbar.fg = ${completion.fg}
-completion.scrollbar.bg = ${completion.bg}
-statusbar.fg = white
-statusbar.bg = black
+completion.item.selected.border.top = #f9d000
+completion.item.selected.border.bottom = #c6a000
+completion.match.fg = #f33
+completion.scrollbar.fg = #4d4d4d
+completion.scrollbar.bg = #aaa
+statusbar.fg = #333
+statusbar.bg = #DBDBDB
 statusbar.fg.error = ${statusbar.fg}
 statusbar.bg.error = red
 statusbar.fg.warning = ${statusbar.fg}
@@ -1269,7 +1306,7 @@ statusbar.bg.prompt = darkblue
 statusbar.fg.insert = ${statusbar.fg}
 statusbar.bg.insert = darkgreen
 statusbar.fg.command = ${statusbar.fg}
-statusbar.bg.command = ${statusbar.bg}
+statusbar.bg.command = #f2f2f2
 statusbar.fg.caret = ${statusbar.fg}
 statusbar.bg.caret = purple
 statusbar.fg.caret-selection = ${statusbar.fg}
@@ -1277,26 +1314,26 @@ statusbar.bg.caret-selection = #a12dff
 statusbar.progress.bg = white
 statusbar.url.fg = ${statusbar.fg}
 statusbar.url.fg.success = white
-statusbar.url.fg.success.https = lime
+statusbar.url.fg.success.https = green
 statusbar.url.fg.error = orange
 statusbar.url.fg.warn = yellow
 statusbar.url.fg.hover = aqua
-tabs.fg.odd = white
-tabs.bg.odd = grey
-tabs.fg.even = white
-tabs.bg.even = darkgrey
-tabs.fg.selected.odd = white
-tabs.bg.selected.odd = black
-tabs.fg.selected.even = ${tabs.fg.selected.odd}
-tabs.bg.selected.even = ${tabs.bg.selected.odd}
-tabs.bg.bar = #555555
+tabs.fg.odd = #111
+tabs.bg.odd = #e2e2e2
+tabs.fg.even = #111
+tabs.bg.even = #e2e2e2
+tabs.fg.selected.odd = #222
+tabs.bg.selected.odd = #bbb
+tabs.fg.selected.even = #222
+tabs.bg.selected.even = #bbb
+tabs.bg.bar = #e2e2e2
 tabs.indicator.start = #0000aa
 tabs.indicator.stop = #00aa00
 tabs.indicator.error = #ff0000
 tabs.indicator.system = rgb
-hints.fg = black
-hints.bg = -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFF785), color-stop(100%,#FFC542))
-hints.fg.match = green
+hints.fg = transparent
+hints.bg = transparent
+hints.fg.match = transparent
 downloads.bg.bar = black
 downloads.fg.start = white
 downloads.bg.start = #0000aa
@@ -1307,6 +1344,9 @@ downloads.bg.system = rgb
 downloads.fg.error = white
 downloads.bg.error = red
 webpage.bg = white
+keyhint.fg = #FFFFFF
+keyhint.fg.suffix = #FFFF00
+keyhint.bg = rgba(0, 0, 0, 90%)
 
 [fonts]
 # Fonts used for the UI, with optional style/weight/size.
@@ -1383,20 +1423,25 @@ webpage.bg = white
 # web-size-default-fixed (Int):
 #     The default font size for fixed-pitch text.
 #     Default:
-_monospace = Terminus, Monospace, "DejaVu Sans Mono", Monaco, "Bitstream Vera Sans Mono", "Andale Mono", "Courier New", Courier, "Liberation Mono", monospace, Fixed, Consolas, Terminal
+#
+# keyhint (Font):
+#     Font used in the keyhint widget.
+#     Default: 8pt ${_monospace}
+_monospace = Hack, Envypn, Fira mono, Terminus, Monospace, "DejaVu Sans Mono", Monaco, "Bitstream Vera Sans Mono", "Andale Mono", "Courier New", Courier, "Liberation Mono", monospace, Fixed, Consolas, Terminal
 completion = 8pt ${_monospace}
 tabbar = 8pt ${_monospace}
 statusbar = 8pt ${_monospace}
 downloads = 8pt ${_monospace}
-hints = bold 13px Monospace
+hints = bold 12px Monospace
 debug-console = 8pt ${_monospace}
-web-family-standard = 
-web-family-fixed = 
-web-family-serif = 
-web-family-sans-serif = 
-web-family-cursive = 
-web-family-fantasy = 
-web-size-minimum = 
-web-size-minimum-logical = 
-web-size-default = 
-web-size-default-fixed = 
+web-family-standard =
+web-family-fixed =
+web-family-serif =
+web-family-sans-serif =
+web-family-cursive =
+web-family-fantasy =
+web-size-minimum =
+web-size-minimum-logical =
+web-size-default =
+web-size-default-fixed =
+keyhint = 10pt ${_monospace}
