--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,11 +1,11 @@
 [Settings]
-gtk-theme-name=numix-gtk-theme
-gtk-icon-theme-name=SuperFlatRemix
-gtk-font-name=Sans 10
+gtk-theme-name=Arc-Darker
+gtk-icon-theme-name=Arc
+gtk-font-name=Karla 9
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
-gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
 gtk-button-images=1
 gtk-menu-images=1
 gtk-enable-event-sounds=1
