--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -125,7 +125,7 @@ auto_update "yes"
 # Limit the depth of the directories being watched, 0 means only watch
 # the music directory itself.  There is no limit by default.
 #
-#auto_update_depth "3"
+auto_update_depth "1"
 
 # }}}
 # {{{ Symbolic link behavior
@@ -133,12 +133,12 @@ auto_update "yes"
 # If this setting is set to "yes", MPD will discover audio files by following
 # symbolic links outside of the configured music_directory.
 #
-#follow_outside_symlinks "yes"
+follow_outside_symlinks "yes"
 #
 # If this setting is set to "yes", MPD will discover audio files by following
 # symbolic links inside of the configured music_directory.
 #
-#follow_inside_symlinks  "yes"
+follow_inside_symlinks  "yes"
 
 # }}}
 # {{{ Zeroconf / Avahi Service Discovery
