tmux: replace default $TERM

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
-set -g default-terminal tmux-256color
+set -g default-terminal xterm-termite
 set -g history-limit 10000
 set -g status-keys vi
 set -g mouse on
