mpd: sidplay decoder

--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -335,11 +335,11 @@ audio_output {
 # filter:
 #  Turns the SID filter emulation on or off.
 
-#decoder {
-#    plugin            "sidplay"
-#    songlength_database    "/media/C64Music/DOCUMENTS/Songlengths.txt"
-#    default_songlength    "120"
-#    filter "true"
-#}
+decoder {
+    plugin              "sidplay"
+    songlength_database "/storage/media/music/c64/D0CUM3NT5/Songlengths.txt"
+    default_songlength  "120"
+    filter              "true"
+}
 
 # }}}
