--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -7,28 +7,34 @@
 ;
 ;=====================================================
 
+[colors]
+background = #222
+background-alt = #444
+foreground = #dfdfdf
+foreground-alt = #55
+primary = #ffb52a
+secondary = #e60053
+alert = #bd2c40
+
 [global/wm]
 margin-top = 5
 margin-bottom = 5
 
-
 [bar/example]
-monitor = ${env:MONITOR:eDP-1}
-bottom = true
-;dock = true
+;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
 height = 27
 offset-x = 0
 offset-y = 0
 
 ;background = ${xrdb:color9}
-background = #ee222222
-foreground = #dfdfdf
+background = ${colors.background}
+foreground = ${colors.foreground}
 
-overline-size = 4
-overline-color = #55f
-underline-color = #5f5
+overline-size = 2
+overline-color = #f00
 underline-size = 2
+underline-color = #00f
 
 border-bottom = 2
 border-bottom-color = #333
@@ -43,23 +49,44 @@ font-0 = fixed:pixelsize=10;0
 font-1 = unifont:size=6:heavy:fontformat=truetype;-2
 font-2 = siji:pixelsize=10;0
 
-modules-left = bspwm i3 mpd
-modules-center = xwindow
-modules-right = backlight volume memory cpu wlan eth battery temperature date powermenu
+modules-left = bspwm i3 xwindow
+modules-center =
+modules-right = backlight volume xkeyboard memory cpu wlan eth battery temperature date powermenu
 
-tray-position = right
+tray-position = xright
 tray-padding = 2
 ;tray-transparent = true
 ;tray-background = #0063ff
 
-wm-restack = bspwm
+;wm-restack = bspwm
+;wm-restack = i3
+
+;override-redirect = true
+
+;scroll-up = bspwm-desknext
+;scroll-down = bspwm-deskprev
+
+;scroll-up = i3wm-wsnext
+;scroll-down = i3wm-wsprev
 
 
 [module/xwindow]
 type = internal/xwindow
-label = %title%
-label-maxlen = 30
+label = %{o#503896 u#503896 +o +u B#301674}  %title:0:30:...%  %{B- -o -u}
 
+[module/xkeyboard]
+type = internal/xkeyboard
+blacklist-0 = num lock
+
+format-underline = ${colors.secondary}
+format-prefix = " "
+format-prefix-foreground = ${colors.foreground-alt}
+
+label-layout = %layout%
+
+label-indicator-padding = 2
+label-indicator-background = ${colors.secondary}
+label-indicator-underline = ${colors.secondary}
 
 [module/filesystem]
 type = internal/fs
@@ -72,52 +99,55 @@ mount-2 = /invalid/mountpoint
 label-mounted = %mountpoint%: %percentage_free%
 
 label-unmounted = %mountpoint%: not mounted
-label-unmounted-foreground = #55
-
-
+label-unmounted-foreground = ${colors.foreground-alt}
 
 [module/bspwm]
 type = internal/bspwm
 ws-icon-default = x
 
-label-active = %index%
-label-active-background = #ee333333
-label-active-underline= #cc333333
-label-active-padding = 2
+label-focused = %index%
+label-focused-background = ${colors.background-alt}
+label-focused-underline= ${colors.primary}
+label-focused-padding = 2
 
 label-occupied = %index%
 label-occupied-padding = 2
 
 label-urgent = %index%
-label-urgent-background = #bd2c40
+label-urgent-background = ${colors.alert}
 label-urgent-padding = 2
 
 label-empty = %index%
-label-empty-foreground = #55
+label-empty-foreground = ${colors.foreground-alt}
 label-empty-padding = 2
-
 
 [module/i3]
 type = internal/i3
-format = <label-state>
+format = <label-state> <label-mode>
 index-sort = true
+;reverse-scroll = false
+wrapping-scroll = false
+
+label-mode = %mode%
+label-mode-padding = 2
+label-mode-foreground = #000
+label-mode-background = ${colors.primary}
 
 label-focused = %index%
-label-focused-background = #ee333333
-label-focused-underline= #cc333333
-label-focused-padding = 2
+label-focused-background = ${module/bspwm.label-focused-background}
+label-focused-underline = ${module/bspwm.label-focused-underline}
+label-focused-padding = ${module/bspwm.label-focused-padding}
 
 label-unfocused = %index%
-label-unfocused-padding = 2
+label-unfocused-padding = ${module/bspwm.label-occupied-padding}
 
 label-urgent = %index%!
-label-urgent-background = #bd2c40
-label-urgent-padding = 2
+label-urgent-background = ${colors.alert}
+label-urgent-padding = ${module/bspwm.label-urgent-padding}
 
 label-visible = %index%
-label-visible-foreground = #55
-label-visible-padding = 2
-
+label-visible-foreground = ${module/bspwm.label-empty-padding}
+label-visible-padding = ${module/bspwm.label-empty-padding}
 
 [module/mpd]
 type = internal/mpd
@@ -138,9 +168,8 @@ icon-seekf = 
 icon-random = 
 icon-repeat = 
 
-toggle-on-foreground = #e60053
+toggle-on-foreground = ${colors.primary}
 toggle-off-foreground = #66
-
 
 [module/backlight]
 type = internal/xbacklight
@@ -157,45 +186,43 @@ bar-fill-font = 2
 bar-fill-foreground = #9f78e1
 bar-empty = ─
 bar-empty-font = 2
-bar-empty-foreground = #55
-
+bar-empty-foreground = ${colors.foreground-alt}
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-label = %{F#666}%{F#cc} %percentage%
-label-underline = #f90000
-
+format-prefix = " "
+format-prefix-foreground = ${colors.foreground-alt}
+format-underline = #f90000
+label = %percentage%
 
 [module/memory]
 type = internal/memory
 interval = 2
-label = %{F#665}%{F#cc} %percentage_used%
-label-underline = #ff0
-label-overline = #4bffdc
-
+format-prefix = " "
+format-prefix-foreground = ${colors.foreground-alt}
+format-underline = #4bffdc
+label = %percentage_used%
 
 [module/wlan]
 type = internal/network
 interface = net1
 interval = 3.0
-;udspeed-minwidth = 1
 
 format-connected = <ramp-signal> <label-connected>
 format-connected-underline = #9f78e1
 format-disconnected-underline = ${self.format-connected-underline}
 
-label-connected = %essid% %downspeed:8%
+label-connected = %essid%
 label-disconnected = %ifname% disconnected
-label-disconnected-foreground = #55
+label-disconnected-foreground = ${colors.foreground-alt}
 
 ramp-signal-0 = 
 ramp-signal-1 = 
 ramp-signal-2 = 
 ramp-signal-3 = 
 ramp-signal-4 = 
-ramp-signal-foreground = #55
-
+ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
 type = internal/network
@@ -203,31 +230,40 @@ interface = net0
 interval = 3.0
 
 format-connected-underline = #55aa55
+format-connected-prefix = " "
+format-connected-foreground-foreground = ${colors.foreground-alt}
+label-connected = %local_ip%
+
 format-disconnected-underline = ${self.format-connected-underline}
-
-label-connected = %{F#55}%{F#ff} %local_ip%
 label-disconnected = %ifname% disconnected
-label-disconnected-foreground = #55
-
+label-disconnected-foreground = ${colors.foreground-alt}
 
 [module/date]
 type = internal/date
-date = %%{F#55}%%{F#ff} %H:%M
-date-alt = %%{F#55}%{F#ff} %Y-%m-%d  %%{F#55}%%{F#ff} %H:%M
 interval = 5
+
+date =
+date-alt = " %Y-%m-%d"
+
+time = %H:%M
+time-alt = %H:%M:%S
+
+format-prefix = 
+format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #0a6cf5
 
+label = %date% %time%
 
 [module/volume]
 type = internal/volume
 
 format-volume = <label-volume> <bar-volume>
-
 label-volume = VOL
 label-volume-foreground = ${root.foreground}
 
-label-muted =  sound muted
-label-muted-foreground = #55
+format-muted-prefix = " "
+format-muted-foreground = ${colors.foreground-alt}
+label-muted = sound muted
 
 bar-volume-width = 10
 bar-volume-foreground-0 = #55aa55
@@ -245,8 +281,7 @@ bar-volume-fill = ─
 bar-volume-fill-font = 2
 bar-volume-empty = ─
 bar-volume-empty-font = 2
-bar-volume-empty-foreground = #55
-
+bar-volume-empty-foreground = ${colors.foreground-alt}
 
 [module/battery]
 type = internal/battery
@@ -256,25 +291,24 @@ full-at = 98
 
 format-charging = <animation-charging> <label-charging>
 format-charging-underline = #ffb52a
+
 format-discharging = <ramp-capacity> <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
-format-full = %{F#55}%{F#ff}  <label-full>
-format-full-underline = ${self.format-charging-underline}
 
-label-discharging = %percentage% %time%
-label-charging = %percentage% %time%
+format-full-prefix = " "
+format-full-prefix-foreground = ${colors.foreground-alt}
+format-full-underline = ${self.format-charging-underline}
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
-ramp-capacity-foreground = #55
+ramp-capacity-foreground = ${colors.foreground-alt}
 
 animation-charging-0 = 
 animation-charging-1 = 
 animation-charging-2 = 
-animation-charging-foreground = #55
+animation-charging-foreground = ${colors.foreground-alt}
 animation-charging-framerate = 750
-
 
 [module/temperature]
 type = internal/temperature
@@ -288,23 +322,22 @@ format-warn-underline = ${self.format-underline}
 
 label = %temperature%
 label-warn = %temperature%
-label-warn-foreground = #e60053
+label-warn-foreground = ${colors.secondary}
 
 ramp-0 = 
 ramp-1 = 
 ramp-2 = 
-ramp-foreground = #55
-
+ramp-foreground = ${colors.foreground-alt}
 
 [module/powermenu]
 type = custom/menu
 
 label-open =  power
-label-open-foreground = #e60053
+label-open-foreground = ${colors.secondary}
 label-close =  cancel
-label-close-foreground = #e60053
+label-close-foreground = ${colors.secondary}
 label-separator = |
-label-separator-foreground = #55
+label-separator-foreground = ${colors.foreground-alt}
 
 menu-0-0 = reboot
 menu-0-0-exec = menu-open-1
