--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
-set -g default-terminal xterm-termite
+set -g default-terminal tmux-256color
 set -g history-limit 10000
 set -g status-keys vi
 set -g mouse on
@@ -71,6 +71,6 @@ set -g window-status-current-attr bold
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami)'
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'jjkj
+set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
 
 # }}}
