irssi: remove rizon autoconnect

--- a/.irssi/config
+++ b/.irssi/config
@@ -45,7 +45,7 @@ servers = (
   address = "znc.local";
   port = "9242";
   chatnet = "rizon";
-  autoconnect = "yes";
+  autoconnect = "no";
   use_ssl = "yes";
   ssl_verify = "no";
   password = "jaagr/rizon:ZNC_PASSWORD";
